# oai5g

./: CMakeLists.txt
ci-scripts/: Jenkinsfile-GitLab-Container  cls_containerize.py  main.py
ci-scripts/conf_files/: gnb.sa.band78.106prb.rfsim.neighbor.conf  gnb.sa.band78.51prb.usrpb200.conf
ci-scripts/yaml_files/5g_f1_rfsimulator/: docker-compose.yaml
ci-scripts/yaml_files/5g_fdd_rfsimulator/: docker-compose.yaml
ci-scripts/yaml_files/5g_l2sim_tdd/: docker-compose.yaml
ci-scripts/yaml_files/5g_rfsimulator/: README.md  docker-compose.yaml
ci-scripts/yaml_files/5g_rfsimulator_24prb/: docker-compose.yaml
ci-scripts/yaml_files/5g_rfsimulator_2x2/: docker-compose.yaml
ci-scripts/yaml_files/5g_rfsimulator_accelleran/: docker-compose.yaml
ci-scripts/yaml_files/5g_rfsimulator_e1/: docker-compose.yaml
ci-scripts/yaml_files/5g_rfsimulator_fdd_phytest/: docker-compose.yaml
ci-scripts/yaml_files/5g_rfsimulator_fr2_32prb/: docker-compose.yaml
ci-scripts/yaml_files/5g_rfsimulator_tdd_dora/: docker-compose.yaml
ci-scripts/yaml_files/5g_rfsimulator_u0_25prb/: docker-compose.yaml
cmake_targets/: build_oai
cmake_targets/tools/: build_helper
common/config/: config_load_configmodule.c
common/utils/: CMakeLists.txt  system.c  system.h
common/utils/LOG/: CMakeLists.txt  log.c  log.h  lttng-log.h  lttng-tp.h  lttng_logs.md
common/utils/T/: T_messages.txt
common/utils/nr/: nr_common.c  nr_common.h
common/utils/threadPool/: CMakeLists.txt  thread-pool.c
common/utils/threadPool/test/: CMakeLists.txt  test_thread-pool.c
doc/: Aerial_FAPI_Split_Tutorial.md  FEATURE_SET.md  LDPC_T2_OFFLOAD_SETUP.md  NR_SA_Tutorial_OAI_nrUE.md  README.md  RUNMODEM.md  UnitTests.md  code-style-contrib.md  cpu_threading.md
docker/: Dockerfile.base.ubuntu22  Dockerfile.fhi72.gNB.ubuntu22  Dockerfile.gNB.aerial.ubuntu20
executables/: lte-softmodem.c  lte-uesoftmodem.c  nr-gnb.c  nr-ru.c  nr-softmodem.c  nr-ue.c  nr-uesoftmodem.c  nr-uesoftmodem.h  softmodem-common.h
nfapi/tests/: CMakeLists.txt  nr_fapi_test.h
nfapi/tests/p5/: CMakeLists.txt  nr_fapi_config_request_test.c  nr_fapi_config_response_test.c  nr_fapi_error_indication_test.c  nr_fapi_param_request_test.c  nr_fapi_param_response_test.c  nr_fapi_start_request_test.c  nr_fapi_start_response_test.c  nr_fapi_stop_indication_test.c  nr_fapi_stop_request_test.c
nfapi/tests/p7/: CMakeLists.txt  nr_fapi_dci_inversion_test.c
openair1/PHY/: defs_gNB.h  defs_nr_UE.h  impl_defs_top.h
openair1/SCHED_NR/: phy_procedures_nr_gNB.c  sched_nr.h
openair1/SCHED_NR_UE/: defs.h  fapi_nr_ue_l1.c  fapi_nr_ue_l1.h  phy_procedures_nr_ue.c  phy_procedures_nr_ue_sl.c
openair2/COMMON/: f1ap_messages_def.h  f1ap_messages_types.h  gtpv1_u_messages_types.h  ngap_messages_types.h
openair2/F1AP/: f1ap_common.c  f1ap_common.h  f1ap_cu_interface_management.c  f1ap_cu_interface_management.h  f1ap_cu_rrc_message_transfer.c  f1ap_cu_ue_context_management.c  f1ap_du_interface_management.c  f1ap_du_interface_management.h  f1ap_du_rrc_message_transfer.c  f1ap_du_task.c  f1ap_handlers.c
openair2/GNB_APP/: MACRLC_nr_paramdef.h  RRC_nr_paramsvalues.h  gnb_config.c  gnb_paramdef.h
openair2/NR_UE_PHY_INTERFACE/: NR_IF_Module.c  NR_IF_Module.h
openair3/ocp-gtpu/: gtp_itf.cpp
radio/ETHERNET/: if_defs.h
radio/rfsimulator/: README.md  simulator.c
(+149 files in other folders)
