add_subdirectory(alg)
add_subdirectory(ds)
add_boolean_option(ENABLE_TELNETSRV OFF "Whether to build telnet support in modems" OFF)
if(ENABLE_TELNETSRV)
  add_subdirectory(telnetsrv)
endif()
add_boolean_option(ENABLE_WEBSRV OFF "Whether to build the webserver" OFF)
if(ENABLE_WEBSRV)
  add_subdirectory(websrv)
endif()

add_subdirectory(T)
add_subdirectory(LOG)
add_library(system system.c)
target_include_directories(system PUBLIC .)
target_link_libraries(system PRIVATE ${T_LIB})
add_subdirectory(threadPool)